grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice($._simple_statements, $._compound_statement),

    // Simple statements

    expression_statement: $ =>
      choice(
        $.expression,
        seq(commaSep1($.expression), optional(",")),
        $.assignment,
        $.augmented_assignment,
        $.yield
      ),

    named_expression: $ =>
      seq(field("name", $.identifier), ":=", field("value", $.expression)),

    return_statement: $ =>
      seq("testreturnlegesher", optional($._expressions)),

    _expressions: $ => choice(
      $.expression, $.expression_list),

    for_statement: $ =>
      seq(
        optional("testasynclegesher"),
        "testforlegesher",
        field("left", $._left_hand_side),
        "testinlegesher",
        field("right", $._expressions),
        ":",
        field("body", $._suite),
        field("alternative", optional($.else_clause))
      ),

    with_statement: $ =>
      seq(
        optional("testasynclegesher"),
        "testwithlegesher",
        commaSep1($.with_item),
        ":",
        field("body", $._suite)
      ),

    with_item: $ =>
      seq(
        field("value", $.expression),
        optional(seq("testaslegesher", field("alias", $.pattern)))
      ),

    function_definition: $ =>
      seq(
        optional("testasynclegesher"),
        "testdeflegesher",
        field("name", $.identifier),
        field("parameters", $.parameters),
        optional(seq("->", field("return_type", $.type))),
        ":",
        field("body", $._suite)
      ),

    parameters: $ => seq(
      '(',
      optional($._parameters),
      ')'
    ),

    lambda_parameters: $ => $._parameters,

    list_splat: $ => seq("*", $.expression),

    dictionary_splat: $ => seq("**", $.expression),

    argument_list: $ =>
      seq(
        "(",
        optional(
          commaSep1(
            choice(
              $.expression,
              $.list_splat,
              $.dictionary_splat,
              alias($.parenthesized_list_splat, $.parenthesized_expression),
              $.keyword_argument
            )
          )
        ),
        optional(","),
        ")"
      ),

    _suite: $ =>
      choice(
        alias($._simple_statements, $.block),
        seq($._indent, $.block),
        alias($._newline, $.block)
      ),

    block: $ => seq(repeat($._statement), $._dedent),

    expression_list: $ => prec.right(seq(
      $.expression,
      choice(
        ',',
        seq(
          repeat1(seq(
            ',',
            $.expression
          )),
          optional(',')
        ),
      ))),

    _parameters: $ => seq(
      commaSep1($.parameter),
      optional(',')
    ),

    _patterns: $ => seq(
      commaSep1($.pattern),
      optional(',')
    ),

    tuple_pattern: $ => seq(
      '(',
      optional($._patterns),
      ')'
    ),

    default_parameter: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $.expression)
    ),

    typed_default_parameter: $ => prec(PREC.typed_parameter, seq(
      field('name', $.identifier),
      ':',
      field('type', $.type),
      '=',
      field('value', $.expression)
    )),

    list_splat_pattern: $ => seq(
      '*',
      choice($.identifier, $.keyword_identifier, $.subscript, $.attribute)
    ),

    dictionary_splat_pattern: $ => seq(
      '**',
      choice($.identifier, $.keyword_identifier, $.subscript, $.attribute)
    ),


    // Expressions

    _expression_within_for_in_clause: $ =>
      choice($.expression, alias($.lambda_within_for_in_clause, $.lambda)),

    not_operator: $ =>
      prec(PREC.not, seq("testnotlegesher", field("argument", $.expression))),

    boolean_operator: $ =>
      choice(
        prec.left(
          PREC.and,
          seq(
            field("left", $.expression),
            field("operator", "testandlegesher"),
            field("right", $.expression)
          )
        ),
        prec.left(
          PREC.or,
          seq(
            field("left", $.expression),
            field("operator", "testorlegesher"),
            field("right", $.expression)
          )
        )
      ),

    binary_operator: $ => {
      const table = [
        [prec.left, "+", PREC.plus],
        [prec.left, "-", PREC.plus],
        [prec.left, "*", PREC.times],
        [prec.left, "@", PREC.times],
        [prec.left, "/", PREC.times],
        [prec.left, "%", PREC.times],
        [prec.left, "//", PREC.times],
        [prec.right, "**", PREC.power],
        [prec.left, "|", PREC.bitwise_or],
        [prec.left, "&", PREC.bitwise_and],
        [prec.left, "^", PREC.xor],
        [prec.left, "<<", PREC.shift],
        [prec.left, ">>", PREC.shift]
      ];

      return choice(
        ...table.map(([fn, operator, precedence]) =>
          fn(
            precedence,
            seq(
              field("left", $.primary_expression),
              field("operator", operator),
              field("right", $.primary_expression)
            )
          )
        )
      );
    },

    unary_operator: $ =>
      prec(
        PREC.unary,
        seq(
          field("operator", choice("+", "-", "~")),
          field("argument", $.primary_expression)
        )
      ),

    comparison_operator: $ =>
      prec.left(
        PREC.compare,
        seq(
          $.primary_expression,
          repeat1(
            seq(
              choice(
                "<",
                "<=",
                "==",
                "!=",
                ">=",
                ">",
                "<>",
                "testinlegesher",
                seq("testnotlegesher", "testinlegesher"),
                "testislegesher",
                seq("testislegesher", "testnotlegesher")
              ),
              $.primary_expression
            )
          )
        )
      ),

    lambda: $ =>
      prec(
        PREC.lambda,
        seq(
          "testlambdalegesher",
          field("parameters", optional($.lambda_parameters)),
          ":",
          field("body", $.expression)
        )
      ),

    assignment: $ =>
      seq(
        field("left", $._left_hand_side),
        choice(
          seq("=", field("right", $._right_hand_side)),
          seq(":", field("type", $.type)),
          seq(
            ":",
            field("type", $.type),
            "=",
            field("right", $._right_hand_side)
          )
        )
      ),

    augmented_assignment: $ =>
      seq(
        field("left", $._left_hand_side),
        field(
          "operator",
          choice(
            "+=",
            "-=",
            "*=",
            "/=",
            "@=",
            "//=",
            "%=",
            "**=",
            ">>=",
            "<<=",
            "&=",
            "^=",
            "|="
          )
        ),
        field("right", $._right_hand_side)
      ),

    _left_hand_side: $ => choice(
      $.pattern,
      $.pattern_list
    ),

    pattern_list: $ => seq(
      $.pattern,
      choice(
        ',',
        seq(
          repeat1(seq(
            ',',
            $.pattern
          )),
          optional(',')
        )
      )
    ),

    _right_hand_side: $ =>
      choice($.expression, $.expression_list, $.assignment, $.augmented_assignment, $.yield),

    yield: $ =>
      prec.right(seq(
        "testyieldlegesher",
        choice(
          seq("testfromlegesher", $.expression),
          optional($._expressions)
        )
      )),

    attribute: $ =>
      prec(
        PREC.call,
        seq(
          field("object", $.primary_expression),
          ".",
          field("attribute", $.identifier)
        )
      ),

    subscript: $ =>
      prec(
        PREC.call,
        seq(
          field("value", $.primary_expression),
          "[",
          commaSep1(field('subscript', choice($.expression, $.slice))),
          optional(","),
          "]"
        )
      ),

    slice: $ =>
      seq(
        optional($.expression),
        ":",
        optional($.expression),
        optional(seq(":", optional($.expression)))
      ),

    ellipsis: $ => "...",

    call: $ =>
      prec(
        PREC.call,
        seq(
          field("function", $.primary_expression),
          field("arguments", choice($.generator_expression, $.argument_list))
        )
      ),

    type: $ => $.expression,

    keyword_argument: $ =>
      seq(
        field("name", choice($.identifier, $.keyword_identifier)),
        "=",
        field("value", $.expression)
      ),

    // Literals

    list: $ => seq("[", optional($._collection_elements), "]"),

    tuple: $ => seq('(', optional($._collection_elements), ')'),

    dictionary: $ =>
      seq(
        "{",
        optional(commaSep1(choice($.pair, $.dictionary_splat))),
        optional(","),
        "}"
      ),

    pair: $ =>
      seq(field("key", $.expression), ":", field("value", $.expression)),

    list_comprehension: $ => seq(
      '[',
      field('body', $.expression),
      $._comprehension_clauses,
      ']'
    ),

    generator_expression: $ => seq(
      '(',
      field('body', $.expression),
      $._comprehension_clauses,
      ')'
    ),

    _comprehension_clauses: $ => seq(
      $.for_in_clause,
      repeat(choice(
        $.for_in_clause,
        $.if_clause
      ))
    ),

    parenthesized_expression: $ =>
      prec(
        PREC.parenthesized_expression,
        seq("(", choice($.expression, $.yield), ")")
      ),

    _collection_elements: $ =>
      seq(
        commaSep1(
          choice(
            $.expression,
            $.yield,
            $.list_splat,
            $.parenthesized_list_splat
          )
        ),
        optional(",")
      ),

    for_in_clause: $ =>
      prec.left(seq(
        optional("testasynclegesher"),
        "testforlegesher",
        field("left", $._left_hand_side),
        "testinlegesher",
        field("right", commaSep1($._expression_within_for_in_clause)),
        optional(",")
      )),

    conditional_expression: $ =>
      prec.right(
        PREC.conditional,
        seq(
          $.expression,
          "testiflegesher",
          $.expression,
          "testelselegesher",
          $.expression
        )
      ),

    string: $ =>
      seq(
        alias($._string_start, '"'),
        repeat(
          choice(
            $.interpolation,
            $.escape_sequence,
            $._not_escape_sequence,
            $._string_content
          )
        ),
        alias($._string_end, '"')
      ),

    escape_sequence: $ =>
      token(
        prec(
          1,
          seq(
            "\\",
            choice(
              /u[a-fA-F\d]{4}/,
              /U[a-fA-F\d]{8}/,
              /x[a-fA-F\d]{2}/,
              /\d{3}/,
              /\r?\n/,
              /['"abfrntv\\]/
            )
          )
        )
      ),

    _not_escape_sequence: $ => "\\",

    integer: $ =>
      token(
        choice(
          seq(choice("0x", "0X"), repeat1(/_?[A-Fa-f0-9]+/), optional(/[Ll]/)),
          seq(choice("0o", "0O"), repeat1(/_?[0-7]+/), optional(/[Ll]/)),
          seq(choice("0b", "0B"), repeat1(/_?[0-1]+/), optional(/[Ll]/)),
          seq(
            repeat1(/[0-9]+_?/),
            choice(
              optional(/[Ll]/), // long numbers
              optional(/[jJ]/) // complex numbers
            )
          )
        )
      ),

    float: $ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        seq(
          choice(
            seq(digits, ".", optional(digits), optional(exponent)),
            seq(optional(digits), ".", digits, optional(exponent)),
            seq(digits, exponent)
          ),
          optional(choice(/[Ll]/, /[jJ]/))
        )
      );
    },

    identifier: $ => /[a-zA-Zα-ωΑ-Ω_][a-zA-Zα-ωΑ-Ω_0-9]*/,

    true: $ => "testTruelegesher",
    none: $ => "testNonelegesher",

    await: $ => prec(PREC.unary, seq("testawaitlegesher", $.expression)),
